kubernetes/darkmore/ras/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ras
spec:
  parentRefs:
  - name: gateway-tailscale
    namespace: kgateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
    - ras.infrastructure.ramona.fun
  rules:
    - backendRefs:
      - name: ras
        kind: Service
        port: 80
        group: ""
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
